# wcli

./: CNAME  Cargo.toml  LICENSE  README.md  Trunk.toml  build.rs  config.toml  hn-20e4dd50248d3ced.js  hn-20e4dd50248d3ced_bg.wasm  hn-27ec814b645b317e.js  hn-27ec814b645b317e_bg.wasm  hn-482074d48a615e1d.js  hn-482074d48a615e1d_bg.wasm  hn-a53b4bee0bd01b42.js  hn-a53b4bee0bd01b42_bg.wasm  index.html  input-338ce1cfd4ff125e.css  input-34922205fbd7d25a.css  input-3f00aea8fe36d285.css  input-a2880adb4ce2f5bd.css  input-b7f63ef68dd00f54.css  input-fd4f0a13deb1e146.css  input.css  justfile  rust-analyzer.toml  rustfmt.toml  wcli-2134ffdf455a9905.js  wcli-2134ffdf455a9905_bg.wasm  wcli-2632e0d2c59fb99b.js  wcli-f7c4d63488c2f0.js  wcli-f7c4d63488c2f0_bg.wasm
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yml
e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/tests/: autoscroll-behavior.spec.ts  clear-command.spec.ts  command-history.spec.ts  config.spec.ts  echo-command.spec.ts  help-command.spec.ts  initial-render.spec.ts  input-interaction.spec.ts  projects-command.spec.ts  theme-command.spec.ts
e2e/tests/fixtures/: config.ts  input.ts
src/: config.rs  lib.rs  main.rs  theme.rs
src/components/: banner.rs  history.rs  input.rs  interface.rs  mod.rs  prompt.rs
src/pages/: home.rs  not_found.rs
src/shell/: mod.rs
src/shell/commands/: ack.rs  clear.rs  echo.rs  fetch.rs  help.rs  mod.rs  projects.rs  stack.rs  theme.rs
src/stores/: history.rs  mod.rs  theme.rs
