[package]
name = "hn"
version = "0.1.0"
edition = "2024"
authors = ["nt54hamnghi <hamnghi250699@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
] }
strum = { version = "0.27.1", features = ["derive"] }
fastrand = { version = "2.3.0", features = ["js"] }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = { priority = 5, level = "forbid" }
# unused = { priority = -1, level = "allow" }

[lints.clippy]
all = { priority = -1, level = "deny" }
pedantic = { priority = -1, level = "allow" }
restriction = { priority = -1, level = "allow" }
